Bug 165132 - FILEOPEN DOCX: vertical line now imported as a horizontal line
Summary: FILEOPEN DOCX: vertical line now imported as a horizontal line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: Connectors
  Show dependency treegraph
 
Reported: 2025-02-08 17:07 UTC by Justin L
Modified: 2025-02-28 12:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-127643.docx: example document (15.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-02-08 17:07 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-02-08 17:07:01 UTC
Created attachment 199078 [details]
forum-mso-de-127643.docx: example document

The bar has been importing vertically until 25.2 (backported to 24.8)
commit 6c09c85ec384e88c89bff0817e7fe9889d7ed68e
Author: Miklos Vajna on Wed Jun 26 09:21:17 2024 +0200
    tdf#161779 DOCX import, drawingML: fix handling of translation for lines

Steps to reproduce
1.) open forum-mso-de-127643.docx

The blue bar is now horizontal. It should be vertical.

Found by Collabora's mso-test
Comment 1 Regina Henschel 2025-02-09 01:23:38 UTC
The shape has a rotation in LO. The shape has no rotation in the docx file.

The shape is not a simple line but a connector, although not attached to anything.
Comment 2 Miklos Vajna 2025-02-25 17:50:36 UTC
Let me see; this feels like some bug in svx/ where something goes wrong around these special zero-width or zero-height shapes.
Comment 3 Commit Notification 2025-02-26 14:56:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1bec1608a55c1b5096e7a9d06564c658bd5be1d5

tdf#165132 DOCX import: fix unexpected rotation on entirely vertical line

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-02-27 09:35:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/9070064cf6ded69a611fc20aa062ac4ded2023df

tdf#165132 DOCX import: fix unexpected rotation on entirely vertical line

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-02-28 12:27:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/84de1a2c10caf6a3203520b4a78dbc6e19641d99

tdf#165132 DOCX import: fix unexpected rotation on entirely vertical line

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.